--- a/css/main.css
+++ b/css/main.css
@@ -681,7 +681,8 @@ link {
 }
 
 .form__textarea {
-  margin-bottom: 4px;
+  display: block;
+  margin-bottom: 20px;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -690,7 +691,6 @@ link {
 }
 
 .form__coment {
-  margin-bottom: 20px;
   padding: 12px 16px;
   width: 100%;
   height: 120px;
@@ -700,6 +700,7 @@ link {
   letter-spacing: 0.01em;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  margin-top: 4px;
   outline: none;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
