--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -60,7 +60,8 @@
 }
 
 .form__textarea {
-    margin-bottom: 4px;
+    display: block;
+    margin-bottom: 20px;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
@@ -69,7 +70,6 @@
 }
 
 .form__coment {
-    margin-bottom: 20px;
     padding: 12px 16px;
     width: 100%;
     height: 120px;
@@ -79,6 +79,7 @@
     letter-spacing: 0.01em;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    margin-top: 4px;
     outline: none;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
