--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -44,10 +44,9 @@
     top: 50%;
     transform: translateY(-50%);
     left: -21px;
-}
 
-.checkbox__input:checked+.checkbox__icon {
-    background-color: var(--accent-color);
-    border-color: transparent;
-
+    &.checkbox__input: checked {
+        background-color: var(--accent-color);
+        border-color: transparent;
+    }
 }
