--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -45,8 +45,11 @@
     transform: translateY(-50%);
     left: -21px;
 
-    &.checkbox__input: checked {
-        background-color: var(--accent-color);
-        border-color: transparent;
-    }
+
+}
+
+.checkbox__input:checked+.checkbox__icon {
+    background-color: var(--accent-color);
+    border-color: transparent;
+
 }
