--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -41,9 +41,7 @@
 }
 
 
-.form__control:focus-within .form__icon {
-    fill: var(--accent-color);
-}
+
 
 .form__control {
     position: relative;
@@ -57,6 +55,10 @@
     transform: translateY(-50%);
     color: currentColor;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .form__control:focus-within & {
+        fill: var(--accent-color);
+    }
 }
 
 .form__textarea {
@@ -86,14 +88,14 @@
     &:focus {
         border-color: var(--accent-color);
     }
-}
+
+    &::placeholder {
+        font-family: inherit;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.01em;
+        color: rgba(117, 117, 117, 0.5);
+    }
 
 
-
-.form__coment::placeholder {
-    font-family: inherit;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
 }
